...
        <scene sceneID="gUN-Y5-eny">
            <objects>
                <navigationController title="Settings Nav Controller" useStoryboardIdentifierAsRestorationIdentifier="YES" id="lO5-lO-B3g" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="gear.png" id="XlV-KL-MhV"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="agg-h2-ZEF">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Oils" id="gbQ-HS-1XX"/>
                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="vW3-G4-oFU">
                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Shopping Cart" id="uGD-Jd-5Ip"/>
                    <connections>
                        <outlet property="myTableView" destination="Qt6-Xj-PBP" id="N3V-kX-HRv"/>
...
            <objects>
                <navigationController storyboardIdentifier="ReOrderNav" useStoryboardIdentifierAsRestorationIdentifier="YES" id="7zr-8q-URm" userLabel="ReOrder Nav" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Shopping" image="cart-plus.png" id="Ows-aE-xQq"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="JcP-dH-zvb">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="391" height="1199"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Description:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tSg-1p-cs4">
                                                <rect key="frame" x="20" y="641" width="126" height="21"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes"/>
                                            </textView>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Blueish/green etc." textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="n4W-De-ZIW">
                                                <rect key="frame" x="161" y="413" width="210" height="30"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Thick, Thin, etc." textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="WC5-1H-qVh">
                                                <rect key="frame" x="161" y="451" width="210" height="30"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes"/>
                                            </textView>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Also Known As" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="b4f-8t-zVM">
                                                <rect key="frame" x="161" y="57" width="210" height="30"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Name on Bottle" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Ot6-H2-QE3">
                                                <rect key="frame" x="161" y="20" width="210" height="30"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Formal Scientific Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="QQx-5k-qBB">
                                                <rect key="frame" x="161" y="95" width="210" height="30"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Vendor:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="03d-ox-9yh">
                                                <rect key="frame" x="20" y="570" width="76" height="21"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalHuggingPriority="249" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Company Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id
                                                <rect key="frame" x="161" y="565" width="210" height="30"/>
